Started adding character endpoints
