# app/Http/Controllers/SwaggerController.php
@@ -159,6 +159,41 @@ use App\Armor;
  *                  ), *              )
  *          }
  *      ),
+ *      @SWG\Definition(
+ *          definition="PostCharacter",
+ *          type="object",
+ *          allOf={
+ *              @SWG\Schema(
+ *                  @SWG\Property(property="name", type="string"),
+ *                  @SWG\Property(property="health", type="integer"),
+ *                  @SWG\Property(property="attack_bonus", type="integer"),
+ *                  @SWG\Property(property="damage_bonus", type="integer"),
+ *                  @SWG\Property(property="defense_bonus", type="integer"),
+ *                  @SWG\Property(property="weapon_id", type="integer",
+ *                  @SWG\Property(property="armor_id", type="integer"),
+ *                  ),
+ *              )
+ *          }
+ *      ),
+ *      @SWG\Definition(
+ *          definition="Character",
+ *          type="object",
+ *          allOf={
+ *              @SWG\Schema(
+ *                  @SWG\Property(property="id", type="integer"),
+ *                  @SWG\Property(property="name", type="string"),
+ *                  @SWG\Property(property="health", type="integer"),
+ *                  @SWG\Property(property="attack_bonus", type="integer"),
+ *                  @SWG\Property(property="damage_bonus", type="integer"),
+ *                  @SWG\Property(property="defense_bonus", type="integer"),
+ *                  @SWG\Property(property="weapon_id", type="integer"),
+ *                  @SWG\Property(property="armor_id", type="integer"),
+ *                  @SWG\Property(property="created_at", type="string"),
+ *                  @SWG\Property(property="updated_at", type="string"),
+ *                  @SWG\Property(property="killed_by", type="integer"),
+ *              )
+ *          }
+ *      ),
  *  )
  */
 class SwaggerController extends BaseController
